fixed nav button on smaller screens

--- a/assets/css/movie-page.css
+++ b/assets/css/movie-page.css
@@ -13,9 +13,18 @@ body {
 
 .navbar {
   justify-content: space-between;
+  align-items: baseline;
 }
 
+.navbar-toggler {
+  width: min-content;
+}
 
+.nav {
+  text-align: end;
+  justify-content: flex-end;
+  line-height: 1.3;
+}
 
 .nav-item {
   list-style: none;
@@ -23,6 +32,7 @@ body {
 
 .nav-list {
   display: flex;
+  flex-direction: column;
 }
 
 .nav-link {
@@ -183,6 +193,8 @@ body {
   .movie-details {
     border: none;
   }
-
+  .navbar {
+    padding-top: 2vh;
+  }
 
 }
